[gd_scene load_steps=6 format=2]

[ext_resource path="res://weapons/DamageArea.tscn" type="PackedScene" id=1]
[ext_resource path="res://weapons/DamageArea.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/weapons/sword.png" type="Texture" id=3]
[ext_resource path="res://WeaponProjectile.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 4 )

[node name="WeaponProjectile" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="Body" type="Node2D" parent="."]
position = Vector2( 9, 0 )

[node name="Sprite" type="Sprite" parent="Body"]
position = Vector2( -6, 0 )
texture = ExtResource( 3 )
offset = Vector2( 5, 0 )

[node name="DamageArea" type="Area2D" parent="Body" instance=ExtResource( 1 )]
position = Vector2( -9, 0 )
collision_layer = 2048
collision_mask = 0
script = ExtResource( 2 )
use_exceptions = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/DamageArea"]
position = Vector2( 9, 0 )
shape = SubResource( 1 )

[node name="ReturnDelay" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true
[connection signal="timeout" from="ReturnDelay" to="." method="_on_ReturnDelay_timeout"]
